[package]
name = "solana-swap-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
base64 = "0.13"
bs58 = "0.4"
shellexpand = "3.1"
bincode = "1.3"

# We'll implement Jupiter integration without the Solana SDK for now
# to avoid the dependency hell with edition2024
